--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
   ],
   "dependencies": {
     "semantic-ui": "~0.19.3",
-    "ace-builds": "~1.1.7"
+    "ace-builds": "~1.1.7",
+    "zeroclipboard": "~2.1.6"
   }
 }
