--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "semantic-ui": "~0.19.3",
     "ace-builds": "~1.1.7",
-    "zeroclipboard": "~2.1.6"
+    "zeroclipboard": "~2.1.6",
+    "fontawesome": "~4.2.0"
   }
 }
